version 1.9.8, in progress
- New function pxsum(): computes the cross-sectional sum of a series in
  the context of panel data
- Graphing i18n fix: avoid "decimal comma" in setting size of PDF plots
- Function packages: prevent a package's "bundle-plot" function from
  appearing in the initial GUI listing of public functions
- Deletion of matrices within a loop: ensure that the GUI icon view is
  updated if it's open at the time
- "labels" command: fix the --to-file option
- Fix bug in serialization of matrices as XML (which broke, for example,
  saving of VARs in gretl session files)
- Various small fixes for spreadsheet data importers
- Compaction of daily to weekly data: enable this even if the daily data
  are not dated

2011-12-22 version 1.9.7
- Add two nonparametric estimators: William Cleveland's loess and the
  Nadaraya-Watson estimator; these are available via the new functions
  loess() and nadarwat(), and they're also in the GUI Model menu
- Binary logit and probit: re-implement using Newton-Raphson for
  greater numerical stability
- Documentation updates, including a new chapter on Nonparametric
  methods in the User's Guide
- "store" command: add a --decimal-comma option to export "CSV" data 
  using "," as decimal character (and ";" as column delimiter)
- "leverage" command: add a --quiet option and add calculation of the
  cross-validation criterion (available via the $test accessor)
- "rmplot" command (range-mean plot): add a --trim option to discard the
  minimum and maximum from each sub-sample
- "gnuplot" command: enhance the --with-lines option to permit using
  lines for some series and points for others
- "scatters" command: add a --matrix option and increase the maximum
  number of plots to 16
- Plots in GUI: add option to show semilog fitted line, and make the
  option to show a grid more configurable
- New function simann() provides user access to simulated annealing
- Speed up the production of bootstrapped confidence bands for impulse 